2004-06-09 Alain Magloire

	Patch from Sam Rob to resolve 64022

2004-05-19 Alain Magloire
	New test provided by Sam Rob added for the resolver.

2004-05-03 Bogdan Gheorghe
	Changed search and indexer tests to work with new index enablement
	
2004-04-30 Hoda Amer
	Final fix for bug#57526 : [CModel] CModelElementsTest needs to test STRUCTURAL_PARSE mode as well
	Now All CModel tests run twice, once for quick mode and once for Structural mode (Except for IIncludeTests.java
	
2004-04-26 Hoda Amer
	Partial fix for bug#57526 : [CModel] CModelElementsTest needs to test STRUCTURAL_PARSE mode as well
	Added more tests for Structural Parse to the suit.

2004-04-27 Hoda Amer
	Partial fix for bug#57526 : [CModel] CModelElementsTest needs to test STRUCTURAL_PARSE mode as well
	Added StructuralCModelElementsTest to the suit with the same input as CModelElementsTest,
	but commented some of it as still failing parts.
	
2004-04-23 Hoda Amer
	Patch for Sean Evoy : Removing Managed Build Tests from core tests.
	
2004-04-22 John Camelon
	Added CompleteParseASTTest:testBug47926().

2004-04-22 John Camelon
	Updated test clients for IExpressionParser interface changes.  
	Added QuickParseASTTests.testBug59179().  

2004-04-22 Andrew Niefer
	- added parser/CompleteParseASTTemplateTest.test_14_7_3__12_ExplicitSpecializationOverloadedFunction()
	- added parser/CompleteParseASTTemplateTest.testPartialSpecializationDefinitions()
	- uncommented and modified parser/ParserSymbolTableTemplateTests.test_14_7_3__12_ExplicitSpecializationOverloadedFunction()
	- uncommented and modified parser/ParserSymbolTableTemplateTests.testPartialSpecializationDefinitions()

2004-04-21 Alain Magloire
	Update the PathEntry test.
	* model/org/eclipse/cdt/core/model/tests/CPatEntryTest.java

2004-04-21 John Camelon
	Moved testBug39703() from ASTFailedTests to QuickParseASTTest.
	Added ScannerTestCase::testBug39698().
	Moved testBug39698A() & testBug39698B() from ASTFailedTests to QuickParseASTTest.